configs for RoadGIS

--- a/configs/roadgis/README
+++ b/configs/roadgis/README
@@ -1,5 +1,5 @@
-Файл из ./styles/* копируется в \\RoadGIS\Palette
-Файлы ./fill/* копируются в \\RoadGIS\Images\Заливка
+Р¤Р°Р№Р» РёР· ./styles/* РєРѕРїРёСЂСѓРµС‚СЃСЏ РІ \\RoadGIS\Palette
+Р¤Р°Р№Р»С‹ ./fill/* РєРѕРїРёСЂСѓСЋС‚СЃСЏ РІ \\RoadGIS\Images\Р—Р°Р»РёРІРєР°
 
-Загружаем RoadGIS
-Выбираем Опции-Палитра-открыть и выбираем «Дороги беларуси»
+Р—Р°РіСЂСѓР¶Р°РµРј RoadGIS
+Р’С‹Р±РёСЂР°РµРј РћРїС†РёРё-РџР°Р»РёС‚СЂР°-РѕС‚РєСЂС‹С‚СЊ Рё РІС‹Р±РёСЂР°РµРј В«Р”РѕСЂРѕРіРё Р±РµР»Р°СЂСѓСЃРёВ»
