--- a/configs/roadgis/README
+++ b/configs/roadgis/README
@@ -1,5 +1,5 @@
-Файл из ./styles/* копируется в \\RoadGIS\Palette
-Файлы ./fill/* копируются в \\RoadGIS\Images\Заливка
+Файлы из ./styles/* копируется в \\RoadGIS\Palette
+Файлы и каталоги из ./fill/* копируются в \\RoadGIS\Images\
 
 Загружаем RoadGIS
-Выбираем Опции-Палитра-открыть и выбираем «Дороги беларуси»
+Выбираем Опции-Палитра-открыть и выбираем «roads of belarus»
