1. ?????????? ????????? (???????? ?????????, ???????????, ????????? ???????) 2. ????? ???????? ??????????? ?????????????? by Hind 3. ??????? ????????????? ? kml 4. "?????? ?????" - ?????? ?? ????? ????????? ????? ????? ?? ??????? 5. ??????????? ?????????? ???????? ???????? (????????? ????????? ??????: locale country_name [routing|norouting]) 6. ?????????? ??????? ? ??????? ?? ?????????????

--- a/statistic/komzpa/i18n/sq.po
+++ b/statistic/komzpa/i18n/sq.po
@@ -1,76 +1,79 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR ORGANIZATION
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Albanian translation of the OSM Stats.
+# This file is distributed under the same license as the PACKAGE package.
+# Besnik Bleta <besnik@programeshqip.org>, 2007-2009.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2009-09-27 20:56+EEST\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2009-09-28 13:47+0200\n"
+"Last-Translator: Besnik Bleta <besnik@programeshqip.org>\n"
+"Language-Team: Shqip <besnik@programeshqip.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: ENCODING\n"
-"Generated-By: pygettext.py 1.5\n"
-
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: initialParse.py:78
 msgid "<b>FixMe</b>"
-msgstr ""
+msgstr "<b>Ndreqmëni</b>"
 
 #: initialParse.py:87
 msgid "OSM Stats"
-msgstr ""
+msgstr "Statistika OSM"
 
 #: initialParse.py:98
 msgid "Warnings"
-msgstr ""
+msgstr "Sinjalizime"
 
 #: initialParse.py:100
 msgid "Warning type"
-msgstr ""
+msgstr "Lloj sinjalizimi"
 
 #: initialParse.py:100
 msgid "Way"
-msgstr ""
+msgstr "Udhë"
 
 #: initialParse.py:106
-msgid ""
-"Error loading %s\n"
-msgstr ""
+msgid "Error loading %s\n"
+msgstr "Gabim në ngarkimin e %s\n"
 
 #: initialParse.py:129
 msgid "Unnamed borders"
-msgstr ""
+msgstr "Kufij pa emra"
 
 #: initialParse.py:131
 msgid "Area [km<sup>2</sup>]"
-msgstr ""
+msgstr "Area [km<sup>2</sup>]"
 
 #: initialParse.py:131
 msgid "Density [nodes/km<sup>2</sup>]"
-msgstr ""
+msgstr "Dendësi [nyje/km<sup>2</sup>]"
 
-#: initialParse.py:131 initialParse.py:174 initialParse.py:343
+#: initialParse.py:131
+#: initialParse.py:174
+#: initialParse.py:343
 msgid "Nodes"
-msgstr ""
+msgstr "Nyje"
 
-#: initialParse.py:131 initialParse.py:174 initialParse.py:377
+#: initialParse.py:131
+#: initialParse.py:174
+#: initialParse.py:377
 msgid "Link"
-msgstr ""
+msgstr "Lidhje"
 
-#: initialParse.py:140 initialParse.py:141
+#: initialParse.py:140
+#: initialParse.py:141
 msgid "Unnamed borders pages list"
-msgstr ""
+msgstr "Listë faqesh për kufinj të paemërt"
 
 #: initialParse.py:143
 msgid "Page"
-msgstr ""
+msgstr "Faqe"
 
 #: initialParse.py:156
 msgid "Postal address relations"
-msgstr ""
+msgstr "Marrëdhënie adresash postare"
 
 #: initialParse.py:160
 msgid "double-pass on address relation"
@@ -78,83 +81,85 @@ msgstr ""
 
 #: initialParse.py:174
 msgid "Area"
-msgstr ""
+msgstr "Zonë"
 
 #: initialParse.py:174
 msgid "Density"
-msgstr ""
+msgstr "Dendësi:"
 
-#: initialParse.py:174 initialParse.py:377
+#: initialParse.py:174
+#: initialParse.py:377
 msgid "Name"
-msgstr ""
+msgstr "Emër"
 
-#: initialParse.py:174 initialParse.py:377
+#: initialParse.py:174
+#: initialParse.py:377
 msgid "Type"
-msgstr ""
+msgstr "Lloj"
 
 #: initialParse.py:192
 msgid "??? unknown"
-msgstr ""
+msgstr "??? i/e panjohur"
 
 #: initialParse.py:204
 msgid "<h3>Relations</h3>"
-msgstr ""
+msgstr "<h3>Marrëdhënie</h3>"
 
 #: initialParse.py:262
 msgid "other"
-msgstr ""
+msgstr "tjetër"
 
 #: initialParse.py:266
 msgid "Tags"
-msgstr ""
+msgstr "Etiketa"
 
 #: initialParse.py:313
 msgid "Ways: "
-msgstr ""
+msgstr "Udhë:"
 
 #: initialParse.py:318
 msgid "Nodes: "
-msgstr ""
+msgstr "Nyje:"
 
 #: initialParse.py:323
 msgid "Relations: "
-msgstr ""
+msgstr "Marrëdhënie:"
 
 #: initialParse.py:341
 msgid "Users"
-msgstr ""
+msgstr "Përdoruesa"
 
 #: initialParse.py:343
 msgid "%"
-msgstr ""
+msgstr "%"
 
 #: initialParse.py:343
 msgid "First known edit"
-msgstr ""
+msgstr "Përpunimi i parë i njohur"
 
 #: initialParse.py:343
 msgid "Latest known edit"
-msgstr ""
+msgstr "Përpunimi i fundit i njohur"
 
 #: initialParse.py:343
 msgid "Links"
-msgstr ""
+msgstr "Lidhje"
 
 #: initialParse.py:343
 msgid "Relations"
-msgstr ""
+msgstr "Marrëdhënie"
 
 #: initialParse.py:343
 msgid "Speed [obj/day]"
-msgstr ""
+msgstr "Shpejtësi [obj/ditë]"
 
 #: initialParse.py:343
 msgid "User"
-msgstr ""
+msgstr "Përdorues"
 
 #: initialParse.py:343
 msgid "Ways"
-msgstr ""
+msgstr "Udhë"
 
 #: initialParse.py:364
 msgid "CalcedHome"
@@ -162,59 +167,59 @@ msgstr ""
 
 #: initialParse.py:370
 msgid "name:be,name:en,name:ru"
-msgstr ""
+msgstr "name:be,name:en,name:ru,name:sq"
 
 #: initialParse.py:375
 msgid "Localities"
-msgstr ""
+msgstr "Lokalitete"
 
 #: initialParse.py:387
 msgid "goto"
-msgstr ""
+msgstr "goto"
 
 #: initialParse.py:394
 msgid "Welcome to :"
-msgstr ""
+msgstr "Mirë se vini te"
 
 #: initialParse.py:395
 msgid "<h3>OSM Statistics for %s</h3>"
-msgstr ""
+msgstr "<h3>Statistika OSM për %s</h3>"
 
 #: initialParse.py:397
 msgid "<li><a href=users.html>users</a></li>"
-msgstr ""
+msgstr "<li><a href=users.html>përdoruesa</a></li>"
 
 #: initialParse.py:398
 msgid "<li><a href=points.html>points</a></li>"
-msgstr ""
+msgstr "<li><a href=points.html>pikë</a></li>"
 
 #: initialParse.py:399
 msgid "<li>address relations: %s</li>"
-msgstr ""
+msgstr "<li>marrëdhënie adresash: %s</li>"
 
 #: initialParse.py:400
 msgid "<li><a href=warnings.html>warnings</a></li>"
-msgstr ""
+msgstr "<li><a href=warnings.html>sinjalizime</a></li>"
 
 #: initialParse.py:401
 msgid "<li><a href=borders.html>borders</a></li>"
-msgstr ""
+msgstr "<li><a href=borders.html>kufij</a></li>"
 
 #: initialParse.py:402
 msgid "<li><a href=unnamed.html>unnamed borders</a></li>"
-msgstr ""
+msgstr "<li><a href=unnamed.html>kufij pa emër</a></li>"
 
 #: initialParse.py:403
 msgid "<li><a href=route.html>routing subgraphs</a></li>"
-msgstr ""
+msgstr "<li><a href=route.html>nëngrafikë për rrjetin rrugor</a></li>"
 
 #: initialParse.py:404
 msgid "<li>tags: "
-msgstr ""
+msgstr "<li>etiketa: "
 
 #: initialParse.py:429
 msgid "<p>Average mapping speed: <b>%f</b> obj/day</p>"
-msgstr ""
+msgstr "<p>Shpejtësi mesatare hedhjeje në hartë: <b>%f</b> obj/ditë</p>"
 
 #: initialParse.py:430
 msgid "<p>Tiles fill(avg/max): <b>%f</b>/<b>%s</b></p>"
@@ -222,37 +227,37 @@ msgstr ""
 
 #: initialParse.py:431
 msgid "<p>Number of Nodes: <b>%s</b></p>"
-msgstr ""
+msgstr "<p>Numër Nyjesh: <b>%s</b></p>"
 
 #: initialParse.py:432
 msgid "<p>Number of Ways: <b>%s</b></p>"
-msgstr ""
+msgstr "<p>Numër Udhësh: <b>%s</b></p>"
 
 #: initialParse.py:433
 msgid "<p>Number of Relations: <b>%s</b></p>"
-msgstr ""
+msgstr "<p>Numër Marrëdhëniesh: <b>%s</b></p>"
 
 #: initialParse.py:434
 msgid "<p>Number of Borders/Places: <b>%s</b>/<b>%s</b></p>"
-msgstr ""
+msgstr "<p>Numër Kufijsh/Vendesh: <b>%s</b>/<b>%s</b></p>"
 
 #: initialParse.py:435
 msgid "<p>First known update: <b>%s</b></p>"
-msgstr ""
+msgstr "<p>Përditësimi i parë i njohur: <b>%s</b></p>"
 
 #: initialParse.py:436
 msgid "<p>Last update: <b>%s</b></p>"
-msgstr ""
+msgstr "<p>Përditësimi i fundit: <b>%s</b></p>"
 
 #: initialParse.py:447
 msgid "Routes"
-msgstr ""
+msgstr "Rrugë"
 
 #: initialParse.py:449
 msgid "First way in group"
-msgstr ""
+msgstr "Udha e parë në grup"
 
 #: initialParse.py:449
 msgid "Number of ways"
-msgstr ""
+msgstr "Numër udhësh"
 
