--- a/statistic/komzpa/i18n/ru.po
+++ b/statistic/komzpa/i18n/ru.po
@@ -1,13 +1,14 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR ORGANIZATION
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+# Volf Alexander <firewolf_ttyd0@mail.ru>, 2009
+# Hind <hind@nanodesu.ru>, 2009
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2009-09-27 20:56+EEST\n"
 "PO-Revision-Date: 2009-09-27 22:22+NOVST\n"
-"Last-Translator: Volf Alexander <firewolf_ttyd0@mail.ru>\n"
+"Last-Translator: Hind <hind@nanodesu.ru>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -40,7 +41,7 @@ msgstr "Ошибка загрузки %s\n"
 
 #: initialParse.py:129
 msgid "Unnamed borders"
-msgstr "Безимянные границы"
+msgstr "Безымянные границы"
 
 #: initialParse.py:131
 msgid "Area [km<sup>2</sup>]"
@@ -68,11 +69,11 @@ msgstr "Страница"
 
 #: initialParse.py:156
 msgid "Postal address relations"
-msgstr "Почтовый адрес"
+msgstr "Адресные отношения"
 
 #: initialParse.py:160
 msgid "double-pass on address relation"
-msgstr "Задвоенный проход по адресной связи"
+msgstr "Двойной проход по адресной связи"
 
 #: initialParse.py:174
 msgid "Area"
@@ -140,11 +141,11 @@ msgstr "Ссылки"
 
 #: initialParse.py:343
 msgid "Relations"
-msgstr "Связи"
+msgstr "Отношения"
 
 #: initialParse.py:343
 msgid "Speed [obj/day]"
-msgstr "Скорость [объетов/день]"
+msgstr "Скорость [об-в/день]"
 
 #: initialParse.py:343
 msgid "User"
@@ -156,7 +157,7 @@ msgstr "Линии"
 
 #: initialParse.py:364
 msgid "CalcedHome"
-msgstr "Вычисленный дом"
+msgstr "Расчетное положение"
 
 #: initialParse.py:370
 msgid "name:be,name:en,name:ru"
@@ -172,7 +173,7 @@ msgstr "переход"
 
 #: initialParse.py:394
 msgid "Welcome to :"
-msgstr ""
+msgstr "Добро пожаловать в :"
 
 #: initialParse.py:395
 msgid "<h3>OSM Statistics for %s</h3>"
@@ -188,7 +189,7 @@ msgstr "<li><a href=points.html>населенные пункты</a></li>"
 
 #: initialParse.py:399
 msgid "<li>address relations: %s</li>"
-msgstr "<li>адресные связи: %s</li>"
+msgstr "<li>адресные отношения: %s</li>"
 
 #: initialParse.py:400
 msgid "<li><a href=warnings.html>warnings</a></li>"
@@ -212,7 +213,7 @@ msgstr "<li>ярлыки: "
 
 #: initialParse.py:429
 msgid "<p>Average mapping speed: <b>%f</b> obj/day</p>"
-msgstr "<p>Средняя скорость отрисовки: <b>%f</b> объектов/день</p>"
+msgstr "<p>Средняя скорость отрисовки: <b>%f</b> об-в/день</p>"
 
 #: initialParse.py:430
 msgid "<p>Tiles fill(avg/max): <b>%f</b>/<b>%s</b></p>"
@@ -228,7 +229,7 @@ msgstr "<p>Количество линий: <b>%s</b></p>"
 
 #: initialParse.py:433
 msgid "<p>Number of Relations: <b>%s</b></p>"
-msgstr "<p>Количество связей: <b>%s</b></p>"
+msgstr "<p>Количество отношений: <b>%s</b></p>"
 
 #: initialParse.py:434
 msgid "<p>Number of Borders/Places: <b>%s</b>/<b>%s</b></p>"
